# MusicHub

./: .env.example  .gitignore  CONTRIBUTING.md  Guidelines.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.codex-artifacts/mockups/: standard-daw-mockup.html
.coordination/: README.md  config.json  ownership.json
.coordination/chief/: queue.json
.coordination/releases/: r1-studio-baseline.json  r2-studio-replacement.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: desktop-shell-check.yml  governance-check.yml  stream-protocol-check.yml
docs/: MusicHub_Interaction_Flows_v1.md  MusicHub_Lesson_DSL_Spec_v2.md  MusicHub_Lovable_UI_Info_Package_v1.md  MusicHub_Studio_Domain_Model_v2.md  MusicHub_Studio_Modes_v1.md  MusicHub_UX_Diagrams_v1.md  MusicHub_UX_Journey_v1.md  lovable-codex-coordination.md  loveable-integration.md  tauri-shell.md
docs/project/: DECISIONS.md  Figma_Component_Generation_Guide.md  GIT_WORKFLOW.md  HANDOFF.md  (+50 more)
scripts/: check-governance.mjs  check-ownership.mjs  chief-assign.mjs  coord-next.mjs  coord-poll.mjs  coord-watch.mjs  coordination-lib.mjs  stream-ack.mjs  stream-check-in.mjs  stream-check-out.mjs  stream-report.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-design/: Cargo.toml  tauri.conf.json  tauri.design.conf.json
src-tauri-design/icons/: README.md
src-tauri-design/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src-tauri/capabilities/: default.json
src-tauri/src/: app_menu.rs  commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
supabase/: config.toml
(+507 files in other folders)
