[package]
name = "plint-studio"
version = "0.1.0"
edition = "2021"
description = "MusicHub desktop shell"

[lib]
name = "plint_studio"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "MusicHub"
path = "src/main.rs"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
tauri-build = { version = "2", features = [] }

[dependencies]
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["macros", "process", "sync", "time"] }
